--- a/other-pages/About yc/style.css
+++ b/other-pages/About yc/style.css
@@ -111,10 +111,23 @@ header.active {
   display: none;
 }
 
+#cont1 h3 {
+    font-size: 25px;
+    text-shadow: 0px 0px 4px whitesmoke;
+}
+
 .font {
-  background: white;
-  padding: 3px;
-  border-radius: 50%;
+    background: white;
+    font-size: 17px;
+    padding: 4px;
+    border-radius: 50%;
+    cursor: pointer;
+    width: 33px;
+    display: flex;
+    justify-content: center;
+    height: 33px;
+    align-items: center;
+    color: black;
 }
 
 .bar {
