--- a/other-pages/restuarants/style.css
+++ b/other-pages/restuarants/style.css
@@ -113,12 +113,20 @@ header.active {
 
 .font {
   background: white;
-  padding: 3px;
+  font-size: 17px;
+  padding: 4px;
   border-radius: 50%;
+  cursor: pointer;
+  width: 33px;
+  display: flex;
+  justify-content: center;
+  color: black;
+  height: 33px;
+  align-items: center;
 }
 
 .bar {
-  background-color: #f8f7f7;
+  background-color: #ffffff;
   width: 30px;
   height: 5px;
   border-radius: 10px;
@@ -220,12 +228,13 @@ footer li {
 }
 
 .banner-font {
-  font-size: 37px;
+  font-size: 32px;
 }
 
 .link {
   display: flex;
   align-items: center;
+  gap: 11px;
 }
 
 .copy-icon span {
@@ -281,84 +290,8 @@ img {
 
 .bars.active .bar:nth-child(3) {
   transform: rotate(-45deg) translateX(13px);
-  transition: 0.8s;
   background-color: whitesmoke;
-}
-
-@media (max-width: 1024px) {
-  .nav {
-    margin: 0 20px;
-    padding: 18px;
-    width: 100%;
-  }
-
-  .nav-links {
-    width: 55%;
-  }
-}
-
-@media (max-width: 900px) {
-  .nav-links {
-    width: 65%;
-  }
-
-  .nav-links ul {
-    gap: 18px;
-  }
-}
-
-@media (max-width: 768px) {
-  .nav {
-    margin: 0 16px;
-    padding: 16px;
-  }
-
-  .nav-text {
-    font-size: 22px;
-  }
-
-  .nav-links {
-    position: absolute;
-    top: 87px;
-    left: 0;
-    width: 100%;
-    background: black;
-    display: none;
-  }
-
-  .nav-links ul {
-    flex-direction: column;
-    padding: 20px;
-    gap: 18px;
-  }
-
-  .nav-links ul li a {
-    font-size: 18px;
-  }
-
-  .bars {
-    display: block;
-    cursor: pointer;
-  }
-
-  .nav-font-awe {
-    gap: 10px;
-  }
-}
-
-@media (max-width: 480px) {
-  .nav-text {
-    font-size: 20px;
-  }
-
-  .bar {
-    width: 26px;
-    height: 4px;
-  }
-
-  .font {
-    padding: 2px;
-  }
+  transition: 0.8s;
 }
 
 .banner-text {
@@ -509,16 +442,9 @@ body {
   max-width: 100%;
 }
 
-@media (max-width: 900px) {
-  .hero-card {
-    flex-direction: column;
-    text-align: center;
-    gap: 30px;
-  }
-
-  .hero-text h1 {
-    font-size: 34px;
-  }
+.sub-cont {
+  position: absolute;
+  z-index: 2;
 }
 
 .background {
@@ -530,6 +456,11 @@ body {
   background-position: top;
   position: relative;
   top: 40px;
+}
+
+#cont1 h3 {
+  font-size: 25px;
+  text-shadow: 0px 0px 4px whitesmoke;
 }
 
 .app-iconCont:hover {
