Updated layout and styles

--- a/other-pages/About yc/media.css
+++ b/other-pages/About yc/media.css
@@ -241,10 +241,9 @@
     height: 561px;
   }
 
-  .video-texts {
-    gap: 115px;
-  }
-
+.text-video {
+    gap: 134px;
+}
   .mission {
     width: 100%;
     padding: 9px;
